# site-mita

./: .gitignore  CNAME  README.md  index.html
.stitch/: DESIGN.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_shop_menu.py  0003_occupancy_events.py  0004_membership_community.py  0005_creative_collaborators.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  database.py  encryption.py  security.py
apps/api/app/models/: __init__.py  base.py  campaign.py  community.py  event.py  guest.py  membership.py  menu.py  metrics.py  occupancy.py  reservation.py  shift.py  shop.py  staff.py  table.py  venue.py  waitlist.py  zone.py
apps/api/app/routers/: __init__.py  analytics.py  campaigns.py  community.py  events.py  guests.py  membership.py  menu.py  occupancy.py  reservations.py  seating.py  shifts.py  shop.py  tables.py  venues.py  waitlist.py
apps/api/app/schemas/: __init__.py  campaign.py  common.py  community.py  event.py  guest.py  membership.py  reservation.py  shift.py  staff.py  table.py  venue.py  waitlist.py  zone.py
apps/api/app/services/: __init__.py  availability.py  guest_service.py  membership_service.py  notifications.py  stripe_service.py  unifi_protect.py
apps/api/app/worker/: celery_app.py  tasks.py
apps/api/scripts/: seed_venue.py
deploy/: .env.production.example  RUNBOOK.md  deploy.sh  lmbsc-api.service  lmbsc-deploy.service  lmbsc-watchdog.sh  lmbsc-web.service  local-deploy.sh  setup-server-firewall.sh  sudoers-mita  webhook.py
(+107 files in other folders)
